--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
   <h1>Привет мир!</h1>
   <p> новая жизнь</p>
   <button>push</button>
-  <button>press</button>
+  <button>pres</button>
   <form>
     <input>
   </form>
